--- a/catalog/view/theme/default/template/information/contact.twig
+++ b/catalog/view/theme/default/template/information/contact.twig
@@ -27,47 +27,12 @@
           <div class="column is-12">
             <h1 class="title is-3">{{ heading_title }}</h1>
           </div>
-          <div class="column">
-            <div class="title is-4 has-text-grey">{{ text_location }}</div>
+          <div class="column is-4-desktop is-6-tablet is-12-mobile">
             <div class="block">
-              {% if telephone %}
-              <a class="is-block mb-3" href="tel:{{ telephone }}" rel="nofollow">
-                <span class="icon-text">
-                  <span class="icon has-text-primary">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
-                      <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
-                    </svg>
-                  </span>
-                  <span class="has-text-weight-bold">{{ telephone }}</span>
-                </span>
-              </a>
-              {% endif %}
-              {% if email_address %}
-              <a class="is-block mb-3" href="mailto:{{ email_address }}" rel="nofollow">
-                <span class="icon-text">
-                  <span class="icon has-text-primary">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
-                      <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
-                    </svg>
-                  </span>
-                  <span class="has-text-weight-bold">{{ email_address }}</span>
-                </span>
-              </a>
-              {% endif %}
-              {% if social_media %}
-                {% for item in social_media %}
-                {% if item.contact %}
-                <a href="{{ item.url }}" target="_blank" class="icon-text {{ item.name }} mr-4">
-                  <span class="icon">{{ item.icon|html_entity_decode }}</span>
-                </a>
-                {% endif %}
-                {% endfor %}
-                {% endif %}
-              <hr>
               <p class="mb-5">
-                <span class="icon-text">
+                <span class="icon-text is-flew-wrap-nowrap">
                   <span class="icon has-text-primary">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
                       <path d="M6.5 1A1.5 1.5 0 0 0 5 2.5V3H1.5A1.5 1.5 0 0 0 0 4.5v8A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-8A1.5 1.5 0 0 0 14.5 3H11v-.5A1.5 1.5 0 0 0 9.5 1h-3zm0 1h3a.5.5 0 0 1 .5.5V3H6v-.5a.5.5 0 0 1 .5-.5zm1.886 6.914L15 7.151V12.5a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5V7.15l6.614 1.764a1.5 1.5 0 0 0 .772 0zM1.5 4h13a.5.5 0 0 1 .5.5v1.616L8.129 7.948a.5.5 0 0 1-.258 0L1 6.116V4.5a.5.5 0 0 1 .5-.5z"/>
                     </svg>
                   </span>
@@ -76,9 +41,9 @@
               </p>
               {% if address %}
               <p class="mb-5">
-                <span class="icon-text">
+                <span class="icon-text is-flew-wrap-nowrap">
                   <span class="icon has-text-primary">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
                       <path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z"/>
                       <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
                     </svg>
@@ -90,8 +55,8 @@
               {% if open %}
               <p class="mb-3">
                 <span class="icon-text">
-                  <span class="icon has-text-primary">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
+                  <span class="icon has-text-primary is-flew-wrap-nowrap">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
                       <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"/>
                       <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0z"/>
                     </svg>
@@ -100,51 +65,43 @@
                 </span>
               </p>
               {% endif %}
+              <hr>
+              {% if telephone %}
+              <a class="is-block is-size-5 mb-3" href="tel:{{ telephone }}" rel="nofollow">
+                <span class="icon-text">
+                  <span class="icon has-text-primary">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
+                      <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+                    </svg>
+                  </span>
+                  <span class="has-text-weight-bold">{{ telephone }}</span>
+                </span>
+              </a>
+              {% endif %}
+              {% if email_address %}
+              <a class="is-block is-size-5 mb-3" href="mailto:{{ email_address }}" rel="nofollow">
+                <span class="icon-text">
+                  <span class="icon has-text-primary">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
+                      <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
+                    </svg>
+                  </span>
+                  <span class="has-text-weight-bold">{{ email_address }}</span>
+                </span>
+              </a>
+              {% endif %}
+              {% if social_media %}
+                {% for item in social_media %}
+                {% if item.contact %}
+                <a href="{{ item.url }}" target="_blank" class="icon-text {{ item.name }} mr-4">
+                  <span class="icon is-medium">{{ item.icon|html_entity_decode }}</span>
+                </a>
+                {% endif %}
+                {% endfor %}
+                {% endif %}
             </div>
           </div>
-          <div class="column">
-            <div class="title is-4 has-text-grey">{{ text_contact }}</div>
-            <form action="{{ action }}" method="post" enctype="multipart/form-data">
-              <div class="field">
-                <label class="label" for="input-name">{{ entry_name }}</label>
-                <div class="control">
-                  <input class="input" name="name" value="{{ name }}" id="input-name"  type="text" placeholder="{{ entry_name }}">
-                </div>
-                {% if error_name %}
-                <p class="help is-danger">{{ error_name }}</p>
-                {% endif %}
-              </div>
-              <div class="field">
-                <label class="label" for="input-email">{{ entry_email }}</label>
-                <div class="control">
-                  <input class="input" name="email" value="{{ email }}" id="input-email" type="text" placeholder="{{ entry_email }}">
-                </div>
-                {% if error_email %}
-                <p class="help is-danger">{{ error_email }}</p>
-                {% endif %}
-              </div>
-              <div class="field">
-                <label class="label" for="input-enquiry">{{ entry_enquiry }}</label>
-                <div class="control" id="input-enquiry">
-                  <textarea class="textarea" name="enquiry" placeholder="{{ entry_enquiry }}"></textarea>
-                </div>
-                {% if error_enquiry %}
-                <p class="help is-danger">{{ error_enquiry }}</p>
-                {% endif %}
-              </div>
-              {{ captcha }}
-              <div class="field is-grouped">
-                <div class="control">
-                  <button class="button is-link" type="submit">{{ text_submit }}</button>
-                </div>
-                <div class="control">
-                  <button class="button is-danger is-light" type="reset">{{ text_reset }}</button>
-                </div>
-              </div>
-            </form>
-          </div>
-          <div class="column">
-            <div class="title is-4 has-text-grey">{{ text_on_map }}</div>
+          <div class="column is-8-desktop is-6-tablet is-12-mobile">
             <div class="block contacts-map">
               <iframe src="{{ geocode }}" width="100%" height="400px"></iframe>
             </div>
@@ -164,9 +121,9 @@
               </div>
               <div class="block">
                 <p class="mb-3">
-                  <span class="icon-text">
+                  <span class="icon-text is-flex-wrap-nowrap">
                     <span class="icon has-text-primary">
-                      <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
                         <path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z"/>
                         <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
                       </svg>
@@ -176,9 +133,9 @@
                 </p>
                 {% if location.open %}
                 <p class="mb-3">
-                  <span class="icon-text">
+                  <span class="icon-text is-flex-wrap-nowrap">
                     <span class="icon has-text-primary">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
                         <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"/>
                         <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0z"/>
                       </svg>
@@ -187,10 +144,10 @@
                   </span>
                 </p>
                 {% endif %}
-                <p class="mb-3">
-                  <span class="icon-text">
+                <p class="mb-0">
+                  <span class="icon-text is-flex-wrap-nowrap">
                     <span class="icon has-text-primary">
-                      <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
                         <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
                       </svg>
                     </span>
