safari backgrop blur and svg width was fixed

--- a/catalog/view/theme/default/css/main.css
+++ b/catalog/view/theme/default/css/main.css
@@ -80,6 +80,7 @@
 .modal-background {
   background-color: rgb(255 255 255 / 75%);
   backdrop-filter: blur(7px);
+  -webkit-backdrop-filter: blur(7px);
 }
 
 #search-modal .delete,
