small fix for store search

--- a/catalog/view/theme/default/css/main.css
+++ b/catalog/view/theme/default/css/main.css
@@ -82,7 +82,9 @@
   backdrop-filter: blur(7px);
   -webkit-backdrop-filter: blur(7px);
 }
-
+#stores-modal .modal-card {
+  height: 100%;
+}
 #search-modal .delete,
 #catalog-modal .delete {
   position: fixed;
