logo id duplication was fixed

--- a/catalog/view/theme/default/bulma/dynamic.scss
+++ b/catalog/view/theme/default/bulma/dynamic.scss
@@ -4,7 +4,7 @@ $body-size: 16px;
 
 // Set your brand colors
 $blue: #0055d4;
-$green: #009646;
+$green: #87b822;
 $red: #c30000;
 $purple: #dd0093;
 $pink: #e890bb;
