--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -54,7 +54,7 @@
       <div class="columns is-mobile is-align-items-center">
         <div class="column">
           <div class="columns is-mobile is-align-items-center is-justify-content-space-between">
-            <div id="logo" class="column is-narrow py-5 is-flex is-align-items-center">
+            <div class="column is-narrow py-5 is-flex is-align-items-center">
               <div id="logo">
                 {% if logo %}
                 {% if home == og_url %}
