--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -84,33 +84,35 @@
               </div>
               {% endif %}
             </div>
-            <div class="column is-narrow is-hidden-mobile">
-              <a class="icon-text email" href="mailto:{{ email }}">
-                <span class="icon has-text-primary">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
-                    <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
-                  </svg>
-                </span>
-                <span class="has-text-weight-bold ">{{ email }}</span>
-              </a>
-              <a class="icon-text phone" href="tel:{{ telephone }}">
-                <span class="icon has-text-primary">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
-                    <path d="M11 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h6zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H5z"/>
-                    <path d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-                  </svg>
-                </span>
-                <span class="has-text-weight-bold ">{{ telephone }}</span>
-              </a>
-              {% if social_media %}
-              {% for item in social_media %}
-              {% if item.header %}
-              <a href="{{ item.url }}" target="_blank" class="icon-text {{ item.name }} ml-4">
-                <span class="icon">{{ item.icon|html_entity_decode }}</span>
-              </a>
-              {% endif %}
-              {% endfor %}
-              {% endif %}
+            <div class="column is-narrow">
+              <div class="header-contacts is-hidden-mobile">
+                <a class="icon-text email" href="mailto:{{ email }}">
+                  <span class="icon has-text-primary">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
+                      <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
+                    </svg>
+                  </span>
+                  <span class="has-text-weight-bold ">{{ email }}</span>
+                </a>
+                <a class="icon-text phone" href="tel:{{ telephone }}">
+                  <span class="icon has-text-primary">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
+                      <path d="M11 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h6zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H5z"/>
+                      <path d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+                    </svg>
+                  </span>
+                  <span class="has-text-weight-bold ">{{ telephone }}</span>
+                </a>
+                {% if social_media %}
+                {% for item in social_media %}
+                {% if item.header %}
+                <a href="{{ item.url }}" target="_blank" class="icon-text {{ item.name }} ml-4">
+                  <span class="icon">{{ item.icon|html_entity_decode }}</span>
+                </a>
+                {% endif %}
+                {% endfor %}
+                {% endif %}
+              </div>
             </div>
           </div>
         </div>
