--- a/catalog/view/theme/default/template/extension/module/anycategories.twig
+++ b/catalog/view/theme/default/template/extension/module/anycategories.twig
@@ -1,4 +1,4 @@
-<div class="py-6 anycategories">
+<div class="anycategories py-6">
   <div class="container">
     <div class="columns is-mobile is-multiline">
       <div class="column is-12">
@@ -10,7 +10,7 @@
           <span class="image">
             <img loading="lazy" height="{{ image_height }}px" width="{{ image_width }}px" src="{{ category.thumb }}" alt="{{ category.name }}" title="{{ category.name }}" />
           </span>
-          <span class="title is-size-5-desktop is-size-6-mobile is-block mt-5 has-text-link">{{ category.name }}</span>
+          <span class="is-size-5-desktop is-size-5-tablet is-size-6-mobile is-block mt-5 has-text-link">{{ category.name }}</span>
         </a>
       </div>
       {% endfor %}
