--- a/catalog/view/theme/default/template/extension/module/account.twig
+++ b/catalog/view/theme/default/template/extension/module/account.twig
@@ -1,4 +1,4 @@
-<nav class="panel mb-5">
+<nav class="panel mb-5 is-clipped">
   {% if not logged %}
   <a href="{{ login }}" class="panel-block">
     <span class="panel-icon has-text-primary">
