--- a/catalog/view/theme/default/bulma/scss/components/breadcrumb.scss
+++ b/catalog/view/theme/default/bulma/scss/components/breadcrumb.scss
@@ -28,6 +28,17 @@ $breadcrumb-item-separator-color: $border-hover !default;
       color: $breadcrumb-item-hover-color;
     }
   }
+  li > span {
+    align-items: center;
+    color: $breadcrumb-item-color;
+    display: flex;
+    justify-content: center;
+    padding: $breadcrumb-item-padding-vertical $breadcrumb-item-padding-horizontal;
+
+    &:hover {
+      color: $breadcrumb-item-hover-color;
+    }
+  }
 
   li {
     align-items: center;
