--- a/catalog/view/theme/default/template/extension/module/slideshow.twig
+++ b/catalog/view/theme/default/template/extension/module/slideshow.twig
@@ -1,4 +1,4 @@
-<div class="slideshow slideshow{{ module }}">
+<div class="slideshow slideshow{{ module }} px-3">
   <div class="container">
     <div id="slideshow{{ module }}" class="swiper">
       <div class="swiper-wrapper">
